jsonschemadsl2ecore.trafo.opt/test/test30/invalidtests/example2.test30
{
	"array":1,
	"boolean":true,
	"integer":1.0,
	"null":null,
	"number":1.32333,
	"string":"some string",
	"object":{},
	"extra":"extra"
}